[package]
name = "rust-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
clap = { version = "4.6.1", features = ["derive", "env"]}
config = "0.15.23"
serde = { version = "1.0.228", features = ["derive"]}
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }